service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextapp-svc
  namespace: myapp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: nextapp
  type: NodePort
