ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextapp-ing
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: nextapp-svc
           port:
             number: 80
    host: myapp.local
